--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
-allow 104.167.242.116;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -89,6 +88,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 107.20.0.120;
 allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
@@ -111,7 +111,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -134,9 +133,6 @@ allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
-allow 144.172.118.4;
-allow 144.172.118.55;
-allow 144.172.118.90;
 allow 144.217.80.80;
 allow 144.24.197.112;
 allow 146.59.234.220;
@@ -155,6 +151,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -217,6 +214,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.31.97.21;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -287,6 +285,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -692,6 +691,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -801,7 +801,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -933,7 +932,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fccf:310:1::a;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1035,8 +1033,6 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
-allow 2605:6400:d814:1b8::4;
-allow 2605:6400:d814:2775::;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1158,7 +1154,6 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
@@ -1420,7 +1415,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.195.40.22;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1515,7 +1509,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.249.6;
 allow 46.226.105.168;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1641,7 +1634,6 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
 allow 83.97.20.251;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
