--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -106,7 +107,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -137,7 +137,6 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
-set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -239,8 +238,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
-set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:6400:d814:2775::;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -361,7 +358,6 @@ set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a04:9dc0:31::c0cc:73;
 set_real_ip_from 2a04:9dc0:31::c0cc:fb;
 set_real_ip_from 2a05:541:110:20::1;
