--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -137,6 +138,9 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -238,6 +242,8 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
+allow 2605:6400:d814:2775::;
+allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
