--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -113,6 +113,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 118.163.74.160;
 deny 121.160.200.13;
 deny 121.78.28.175;
 deny 123.253.35.32;
@@ -220,7 +221,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.31.97.21;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -291,6 +291,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -804,6 +805,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -897,7 +899,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -922,7 +923,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1407,7 +1407,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
@@ -1425,6 +1424,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.228.97.234;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.114.41.119;
@@ -1504,7 +1504,6 @@ deny 45.79.50.161;
 deny 45.79.66.123;
 deny 45.80.158.205;
 deny 45.80.158.27;
-deny 45.80.208.127;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.94.31.180;
@@ -1520,6 +1519,7 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.195.109.181;
 deny 46.226.105.168;
 deny 46.226.164.14;
 deny 46.232.251.191;
@@ -1695,7 +1695,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
 deny 91.219.236.101;
-deny 91.219.237.39;
 deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
